@@ -1,3 +1,7 @@
+1998-04-22  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* boot-9.scm (process-define-module): Added keyword use-syntax.
+
 1998-04-19  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* nonblocking.scm: Removed.  libguile is now inherently
